aggiunte cose inutili