@@ -2,4 +2,8 @@
 
 - Associare elementi a metodi
 
-- Come fa `App` a fare riferimento al primo stage?
+- Come fa `controllers.App` a fare riferimento al primo stage?
+
+- Path marco: `--module-path ${PATH_TO_JAVAFX} --add-modules javafx.fxml,javafx.controls,javafx.graphics`
+
+- Per cambiare scena bisogna 
